@@ -2198,6 +2198,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\wx\versioninfo.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\wx\volume.h"
 				>
 			</File>
